# modern-ml-microservices

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
deployment/: app-build.sh
housing-price-model/: pyproject.toml
housing-price-model/deployment/: model-build.sh
housing-price-model/notebooks/: train_model.ipynb
housing-price-orchestrator/: .dockerignore  Dockerfile  pyproject.toml
housing-price-orchestrator/provider/: mlflow_model_provider.py
housing-price-orchestrator/shared/view/: model_predictions_view.py
housing-price-orchestrator/src/: main.py
housing-price-orchestrator/src/provider/: mlflow_model_provider.py
housing-price-orchestrator/src/service/: pricing_service.py
housing-price-orchestrator/src/shared/: data_model_base.py
housing-price-orchestrator/src/shared/config/: config.yaml  config_loader.py
housing-price-orchestrator/src/shared/dto/: price_prediction.py
housing-price-orchestrator/src/shared/view/: mlflow_view.py  request_view.py  response_view.py
housing-price-orchestrator/tests/integration/: inttest_main.py
housing-price-orchestrator/tests/unit/: test_main.py
housing-price-orchestrator/tests/unit/provider/: test_mlflow_model_provider.py
housing-price-orchestrator/tests/unit/service/: test_pricing_service.py
mlflow-server/: start-mlflow.sh
src/: main.py
src/client/: met_client.py
src/dto/: search_result.py
src/provider/: met_provider.py
src/service/: search_service.py
src/shared/: data_model_base.py  model.py
src/shared/config/: config.yaml  config_loader.py
src/shared/view/: met_view.py
tests/: conftest.py
tests/integration/: inttest_main.py
tests/unit/: test_main.py
tests/unit/provider/: test_met_provider.py
tests/unit/service/: test_search_service.py
