[project]
name = "modern-ml-microservices"
version = "0.1.0"
description = "Example repository of how to build a modern microservice architecture to support machine learning applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=2.22.0",
]

[tool.uv.workspace]
members = ["housing-price-model"]
